# Match-Ticketing-System

./: Match.cpp  Match.h  README.md  Ticket.cpp  main.cpp  outputfile
Sprint1/: Requirements Sprint 1.docx  Ticket.cpp  main.cpp
Sprint3/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Match.cpp  Match.h  Ticket.cpp  Ticket.h
code/: Match.cpp  Match.h  Ticket.h  main.cpp
code/tickets/: tickets.cbp  tickets.depend  tickets.layout
